#### Don't forget to change the version number in configure.ac! ####

13 Nov 2003 Additional checks for pending attention interrupt - Greg Smith
11 Nov 2003 bumped configure.ac version to 3.00a.2 just for fun - Fish
11 Nov 2003 fix hst command history logic buffer overflow bug - Fish
11 Nov 2003 ieee.c floating point fixes: fix bug in FP_INFINITE, FP_NAN,
            and FP_ZERO handling for CFDBR, CFEBR, CGDBR, and CGEBR,
            fix int divide by zero crash preceded by msg "lbfpston:
            unexpectedly converting an Infinite" - Willem & Fish
10 Nov 2003 Clear attention interrupt pending during device reset - Greg Smith
08 Nov 2003 Added command history to panel.c - Volker Bandke, code by Marian Gasparovic
07 Nov 2003 Added optimization problem bypass for GCC 2.96 - Ivan Warren
30 Oct 2003 Added crypto functions - Bernard van der Helm / Jan Jaeger
24 Oct 2003 pttrace.c threads trace patch - Greg
22 Oct 2003 shared_server tolerates unix socket problems - Greg
20 Oct 2003 Prevent dyngui unload when gui active - Jan Jaeger
17 Oct 2003 Make sure 'init_hostinfo' called BEFORE 'display_version' - Fish
16 Oct 2003 Always updagte `ints_state' (except PER) with `intlock' held - Greg
13 Oct 2003 fix 'ipending' cmd to display ALL pending interrupts - Fish
13 Oct 2003 dequeue ALL i/o ints in device_reset - Fish
13 Oct 2003 impl.c: terminate w/HHCIN008S if dyngui.dll load fails - Fish
12 Oct 2003 dequeue i/o int fix in device_reset - Jan Jaeger
11 Oct 2003 Added verbose flag to display_version, and set to FALSE on
            standalone utilities - Jay Maynard
07 Oct 2003 Shared library fix for dyninst.c - Jan Jaeger
06 Oct 2003 Enable ia32 assembler assists for -fPIC - Greg Smith
02 Oct 2003 Issue warning message when restoring non-IEBCOPY xmit file
            using dasdload - Greg Smith
01 Oct 2003 Fix segmentation fault using NPTL threads and no console
            device is specified - Greg Smith